--- a/aulas/aula01/package.json
+++ b/aulas/aula01/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "aula01",
-  "version": "1.0.0",
-  "description": "",
+  "name": "aula01 - git",
+  "version": "1.0.1",
+  "description": "aulas de comando git",
   "main": "index.js",
   "scripts": {
     "dev" : "node index.js",
